fixed icon alignment and fixed shuffle algorithm

--- a/src/app/card/card.component.scss
+++ b/src/app/card/card.component.scss
@@ -25,12 +25,13 @@
 
 		&.icon {
 			position: absolute;
-			right: 6px;
-			top: 6px;
+			right: 4px;
+			top: 4px;
 			margin: 0;
 			object-fit: contain;
-			height: 16px;
-			width: 16px;
+			height: 11pt;
+			width: 11pt;
+      line-height: 30px;
 		}
 	}
 
@@ -49,19 +50,19 @@
 
 		img {
 			max-height: 240px;
-			margin: 0 auto;
+			margin: -4px auto;
 
 			&.icon {
-				right: 6px;
-				top: 6px;
-				height: 20px;
-				width: 20px;
+        right: 6px;
+        top: 6px;
+				height: 16pt;
+				width: 16pt;
 			}
 		}
 
 		p {
-			font-size: 16pt;
-			line-height: 30px;
+			font-size: 20pt;
+      line-height: 40px;
 		}
 	}
 }
